src/index.css
@import "tailwindcss";
@font-face {
  font-family: "Instrument Sans";
  src: url("./assets/fonts/InstrumentSans-Regular.otf") format("opentype");
  font-weight: 400;
  font-style: normal;
}

*{
    font-family: "Instrument Sans", sans-serif;
}

.icon{
    @apply w-15 border-2 bg-white rounded-full p-3
}

.background{
  background-image: url("./assets/background.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-color: blue;
}

::-webkit-scrollbar{
  width: 10px;
}

::-webkit-scrollbar-track {
  background: #0f0f0f;
}

/* Handle (thumb) */
::-webkit-scrollbar-thumb {
  @apply bg-fuchsia-600 rounded-full
}

/* Hover effect */
::-webkit-scrollbar-thumb:hover {
  background: #888;
}

img{
  will-change: transform;
}

